* Added ObjectComponent base class for types to be attached to WorldObjects.  Includes some common callbacks for attaching/detaching the component. * Clicking in the render window now detects objects underneath the cursor and selects them in the UI. * Added a basic TreeView widget and switched the scene UI over to using it instead of a ListView.

--- a/src/RenderLab/RenderLab.vcxproj.filters
+++ b/src/RenderLab/RenderLab.vcxproj.filters
@@ -371,6 +371,9 @@
       <Filter>components</Filter>
     </ClInclude>
     <ClInclude Include="Time.h" />
+    <ClInclude Include="components\ObjectComponent.h">
+      <Filter>components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\data\shaders\p_common.hlsli">
