--- a/src/RenderLab/RenderLab.vcxproj
+++ b/src/RenderLab/RenderLab.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="..\..\data\shaders\light_types.h" />
     <ClInclude Include="..\..\data\shaders\p_constants.h" />
     <ClInclude Include="..\Types.h" />
+    <ClInclude Include="components\ObjectComponent.h" />
     <ClInclude Include="components\ModelInstance.h" />
     <ClInclude Include="components\RigidBody.h" />
     <ClInclude Include="debug\Debug.h" />
