--- a/src/RenderLabEditor/RenderLabEditor.vcxproj.filters
+++ b/src/RenderLabEditor/RenderLabEditor.vcxproj.filters
@@ -80,6 +80,7 @@
     <ClCompile Include="Widgets\Separator.cpp">
       <Filter>Widgets</Filter>
     </ClCompile>
+    <ClCompile Include="FileDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWindow.h" />
@@ -136,7 +137,6 @@
     <ClInclude Include="Widgets\Image.h">
       <Filter>Widgets</Filter>
     </ClInclude>
-    <ClInclude Include="WidgetDragData.h" />
     <ClInclude Include="Widgets\WidgetDragData.h">
       <Filter>Widgets</Filter>
     </ClInclude>
@@ -165,6 +165,7 @@
     <ClInclude Include="Widgets\Separator.h">
       <Filter>Widgets</Filter>
     </ClInclude>
+    <ClInclude Include="FileDialog.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ViewModels">
