* Added rotation UI elements to entity property panel. * Replaced vague uses of Vec3 for pitch-yaw-roll rotations with a new explicit Rotation struct. * Moved Entity <-> Physics transform interaction into the RigidBody class. Physics::Update() is responsible for calling the appropriate RigidBody update methods depending on whether physics simulation is active.

--- a/src/MathLib/MathLib.vcxproj.filters
+++ b/src/MathLib/MathLib.vcxproj.filters
@@ -12,6 +12,7 @@
     <ClInclude Include="Vec4.h" />
     <ClInclude Include="UVec2.h" />
     <ClInclude Include="UVec3.h" />
+    <ClInclude Include="Rotation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MathConstants.cpp" />
