--- a/src/MathLib/MathLib.vcxproj
+++ b/src/MathLib/MathLib.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="Matrix33.h" />
     <ClInclude Include="Matrix44.h" />
     <ClInclude Include="Quaternion.h" />
+    <ClInclude Include="Rotation.h" />
     <ClInclude Include="UVec2.h" />
     <ClInclude Include="UVec3.h" />
     <ClInclude Include="Vec2.h" />
