* Component creation now requires an IComponentAllocator instead of using global FreeLists.  The default allocator still uses FreeLists, but this allows the entity/component sources to be differentiatied and iterated over independently.  This is in preparation for editor entities which exist outside of the normal scene. * Scene is now a global singleton.  There's no planned use case where multiple full scenes are required, especially because it would complicate a number of interfaces and system interactions. * Simplified the Physics::Update() method by removing the "SimulationActive" and rigid body updates to keep the Physics interface simple.  The Scene is now responsible for updating physics simulation and rigid bodies. * Added Editor and Wireframe draw passes, neither of which are in use yet.

--- a/src/RenderLab/RenderLab.vcxproj
+++ b/src/RenderLab/RenderLab.vcxproj
@@ -175,6 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="components\ComponentAllocator.cpp" />
     <ClCompile Include="components\Light.cpp" />
     <ClCompile Include="components\ModelInstance.cpp" />
     <ClCompile Include="components\PostProcessVolume.cpp" />
@@ -229,6 +230,7 @@
     <ClInclude Include="..\..\data\shaders\light_types.h" />
     <ClInclude Include="..\..\data\shaders\p_constants.h" />
     <ClInclude Include="..\Types.h" />
+    <ClInclude Include="components\ComponentAllocator.h" />
     <ClInclude Include="components\Light.h" />
     <ClInclude Include="components\EntityComponent.h" />
     <ClInclude Include="components\ModelInstance.h" />
