More refactoring to support editor renderable and more flexible RdrActions: * RdrAction is now a self-contained class.  All of the action setup and building has been extracted from Renderer and moved into RdrAction. * Moved RdrLighting and RdrSky objects into local RdrAction shared data. * Moved volumetric fog rendering into RdrLighting.  The global setting still come from the sky volume, but the fog itself belongs with lighting more than it does sky.  Plus, its global constants are now on the lights constant buffer. * Moved Scene draw queuing into the Scene itself rather than having actions automatically doing it. * Moved shadow pass draw buckets into the normal bucket list.  When shadow map passes are added, they no longer automatically queue objects to the pass.  Instead, the scene is responsible for adding the relevant objects to the shadow passes. * Replaced most QueueDraw() methods with BuildDrawOps().  This allows the draw ops to be queued to multiple passes at a time as well as queuing the draw ops with different render modes (e.g. wireframe). * Fixed draw op sorting order.

--- a/src/RenderLab/RenderLab.vcxproj
+++ b/src/RenderLab/RenderLab.vcxproj
@@ -204,7 +204,7 @@
     <ClCompile Include="render\RdrDeviceTypes.cpp" />
     <ClCompile Include="render\RdrLighting.cpp" />
     <ClCompile Include="render\ModelData.cpp" />
-    <ClCompile Include="render\RdrFrameState.cpp" />
+    <ClCompile Include="render\RdrAction.cpp" />
     <ClCompile Include="render\RdrContextD3D11.cpp" />
     <ClCompile Include="render\RdrContextD3D11_Shaders.cpp" />
     <ClCompile Include="render\RdrMaterial.cpp" />
@@ -266,7 +266,7 @@
     <ClInclude Include="render\RdrDeviceTypes.h" />
     <ClInclude Include="render\RdrDrawOp.h" />
     <ClInclude Include="render\RdrDrawState.h" />
-    <ClInclude Include="render\RdrFrameState.h" />
+    <ClInclude Include="render\RdrAction.h" />
     <ClInclude Include="render\RdrGeometry.h" />
     <ClInclude Include="render\RdrMaterial.h" />
     <ClInclude Include="render\RdrInstancedObjectDataBuffer.h" />
@@ -626,6 +626,7 @@
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(OutDir)/shaders/%(Filename).cso</ObjectFileOutput>
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(OutDir)/shaders/%(Filename).cso</ObjectFileOutput>
       <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)/shaders/%(Filename).cso</ObjectFileOutput>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="..\..\data\shaders\h_terrain.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Hull</ShaderType>
