* Added basic SSAO support.  It's implemented as an entirely post-processing step which has advantages and disadvantages.  Because the engine uses forward rendering, doing SSAO as a post-processing step requires additional albedo and normal buffers.  The general pipeline looks like this:
---
1) Visual passes (opaque, alpha, sky) write to the "lit" color, albedo, and normal buffers.  Note that the lit color includes ambient lighting here.  See notes below.
2) SSAO buffer is generated using the depth and normal buffers.
3) SSAO is applied to the "lit" color buffer by writing out (albedo * ambient * (1 - occlusion)) with the blend mode set to subtractive.  This removes the occluded ambient lighting that was added in step 1.

Note that the lit color from step one includes ambient for now so that SSAO can be easily turned off and on.  Eventually, once I have ambient lighting coming from GI data, I'd like to move all ambient, reflection (including screen-space reflections), and SSAO into one "post-proc lighting" step that applies them all to the "lit" color buffer.

Other notes on this pipeline setup:
Advantages: Simple, clean, and easily separated from other effects.  Most importantly it doesn't further complicate the forward lighting code which is already fairly expensive.
Disadvantages: Have to write out extra buffers during the primary visual passes.  The normals buffer will be needed eventually anyway for screen-space reflections.  I'm not thrilled about the albedo buffer though.  That may need re-thinking later on when the "post-proc lighting" step is further along.  At that point I'll still need a buffer for reflection specular color.  One simple answer might be to replace the albedo buffer with a "base_color + metalness" buffer that can be used for ambient and reflections.
---

* Added "subtractive" and "additive" blend modes to blend state.
* Texture creation now has a binding parameter to explicitly control what bind flags are used when creating the texture inst

--- a/src/RenderLab/RenderLab.vcxproj.filters
+++ b/src/RenderLab/RenderLab.vcxproj.filters
@@ -121,6 +121,18 @@
     <FxCompile Include="..\..\data\shaders\p_editor_gizmo.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="..\..\data\shaders\p_ssao_gen.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\data\shaders\p_ssao_apply.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\data\shaders\p_ssao_blur.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\data\shaders\p_copy.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Precompiled.cpp" />
