--- a/src/RenderLab/RenderLab.vcxproj.filters
+++ b/src/RenderLab/RenderLab.vcxproj.filters
@@ -133,6 +133,9 @@
     <FxCompile Include="..\..\data\shaders\p_copy.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="..\..\data\shaders\p_decal.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Precompiled.cpp" />
